--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="/">
+                <a href="index.html">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
@@ -228,7 +228,7 @@
                 <blockquote>
                     El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.
                 </blockquote>
-                <p>- Juan De la torre</p>
+            
             </div>
         </section>
     </div>
